History of this buildout
========================

4.2 (unreleased)
----------------

- Nothing changed yet.


4.1 (2011-10-27)
----------------

- Use plone.recipe.plone 3.1.7-zest-1 that knows where to get
  ZopeVersionControl-0.3.4.tar.gz.  If you get "Error: Not a
  recognized archive type" when running bin/buildout then remove that
  old ZopeVersionControl tarball and try again.
  [maurits]

- Fixed Unauthorized error when displaying a list of relatedDocuments
  that the user does not have access to.  (Merged from maintenance branch.)
  [maurits]


4.0 (2011-10-21)
----------------

- Removed bin/backup as this is not useful for RelStorage.
  [maurits]

- Restructure buildout configs to match the setup of LNE and use
  RelStorage.  No more zeoserver and zeoclient.
  [maurits]


3.25 (2011-10-18)
-----------------

- Re-enable and improve the duplicate users check from the minaraad
  service panel.
  [maurits]


3.24 (2011-10-18)
-----------------

- Added migration step to fix double invitees.
  [maurits]

- Make get_file_brains more efficient by not getting objects.
  [maurits]

- Add Council member to the View meeting in digibib in the rolemap.xml.
  [jladage]


3.23 (2011-10-17)
-----------------

- Fixed a few out-of-date cases for generating a pdf.
  [maurits]

- Fixed ValueError when viewing a meeting with an unexpected value in
  the participants.
  [maurits]


3.22 (2011-10-13)
-----------------

- Fixed date display in datetime macro.
  [maurits]

- Added migration to fix unordered agenda items.
  [maurits]


3.21 (2011-10-12)
-----------------

- Sort the project archive on advisory date intead of deadline.
  [maurits]


3.20 (2011-10-12)
-----------------

- Removed indexes/brains from the schema definations of our content
  types.  Not completely sure if this code is actually having an
  effect still, but we certainly do not want it.  We use catalog.xml
  and setuphandlers.py or Extensions/install.py.
  [maurits]


3.19 (2011-10-12)